# substrait-cpp

include/substrait/type/: Type.h
src/substrait/common/: CMakeLists.txt
src/substrait/expression/: CMakeLists.txt
src/substrait/proto/: CMakeLists.txt
src/substrait/textplan/: CMakeLists.txt
src/substrait/textplan/converter/: CMakeLists.txt
src/substrait/textplan/parser/: CMakeLists.txt  SubstraitPlanTypeVisitor.cpp
src/substrait/textplan/parser/grammar/: CMakeLists.txt
src/substrait/type/: CMakeLists.txt  Type.cpp
